Spelling fixed,tabs in signin and signup fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -13,7 +13,7 @@
                     <img src="../../../assets/images/loginLogo.png" alt="BuildSupply" class="logo-img mb-4 mt-4" />
 
                 <!-- sign in/up tabs-->
-                   <mat-tab-group (selectedTabChange)="tabChanged($event)">
+                   <mat-tab-group class="tab-signin-up" (selectedTabChange)="tabChanged($event)">
                         <mat-tab label="Sign In"> 
                             <div>
                                     <signin></signin>
