display changed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/pages/signin-signup.scss
+++ b/src/assets/scss/pages/signin-signup.scss
@@ -45,7 +45,7 @@
 .tab-signin-up{
 
         .mat-tab-header {
-            display: block;
+            display: flex;
             overflow: hidden;
             position: relative;
             flex-shrink: 0;
