width Set in tabs and forms after login, fixed certain issues Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/pages/signin-signup.scss
+++ b/src/assets/scss/pages/signin-signup.scss
@@ -57,7 +57,7 @@
             display: none;
         }
         .mat-tab-label{
-            min-width : 90px;
+            min-width : 50%;
         }
 
 }
