--- a/src/app/features/users/add-user/add-user.component.html
+++ b/src/app/features/users/add-user/add-user.component.html
@@ -47,7 +47,7 @@
                                         <mat-label>Role</mat-label>
                                         <mat-select formControlName="roleId">
                                             <mat-option *ngFor="let role of roles" [value]="role.roleId">
-                                                {{role.roleName}}
+                                                {{role.roleDescription}}
                                             </mat-option>
                                         </mat-select>
                                     </mat-form-field>
