--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -42,7 +42,7 @@
       </div>
   </div>
 
-  
+
 <ng-container *ngIf="dataSourceActivateTemp.length > 0">
   <mat-expansion-panel class="myPanel" [expanded]="true">
     <mat-expansion-panel-header>
@@ -113,11 +113,10 @@
                <img src="../../../../assets/images/user-disable.png">
                </a></mat-icon>
               <i class="material-icons main-color" (click)="editProject(element)"> 
-                <a class="width-17-px p-r-10 cursor-pointer">
+                <a class="width-17-px p-r-10 cursor-pointer margin-top-minus3px">
                <img src="../../../../assets/images/edit.png">
                </a>
                  </i>
-                 
             </td>
           </ng-container>
 
