--- a/src/app/shared/layout/header/header.html
+++ b/src/app/shared/layout/header/header.html
@@ -18,6 +18,14 @@
       /></span>
       <span class="menu-spacer"></span>
       
+    <button  class="pull-right p-t-10"
+      mat-button>
+
+       <a href="javascript:void(0)" (click)="openDiv()">
+         <mat-icon [ngClass]="{'bell-icon-active': notifClicked === true,'bell-icon':notifClicked === false }" matBadge="{{unreadnotificationLength}}" matBadgeSize="small" matBadge="15" matBadgeColor="warn">notifications</mat-icon>
+       </a>
+    </button>
+
 
       <div fxShow="true" fxHide.lt-md>
        
@@ -104,14 +112,6 @@
       (click)="setButtonName('supplier')"
     >
       Supplier
-    </button>
-
-    <button  class="color-white pull-right p-t-10"
-      mat-button>
-
-       <a href="javascript:void(0)" (click)="openDiv()">
-         <mat-icon [ngClass]="{'bell-icon-active': notifClicked === true,'bell-icon':notifClicked === false }" matBadge="{{unreadnotificationLength}}" matBadgeSize="small" matBadge="15" matBadgeColor="warn">notifications</mat-icon>
-       </a>
     </button>
   </div>
 
