--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -5,8 +5,7 @@
         <div class="col-md-12">
           <div class="row ">
             <div class="col-xs-12 p-t-10">
-              <button mat-raised-button class="main-background-color main-button color-white pull-right m-r-30"
-                [disabled]="!form.valid">
+              <button mat-raised-button class="main-background-color main-button color-white pull-right m-r-30" [disabled]="!form.valid">
                 Float RFQ
               </button>
             </div>
@@ -43,13 +42,13 @@
             <div class="col-md-3" *ngFor="let supplier of selectedSuppliersList">
               <mat-card>
                 <div class="col-md-12 text-bold">
-                  <label for="company ">{{supplier.supplier_name}}</label>
+                  <label for="company ">{{ supplier.supplier_name }}</label>
                 </div>
                 <div class="col-md-12">
-                  <label for="email">{{supplier.email}}</label>
+                  <label for="email">{{ supplier.email }}</label>
                 </div>
                 <div class="col-md-12">
-                  <label for="phoneNumber">{{supplier.contact_no}}</label>
+                  <label for="phoneNumber">{{ supplier.contact_no }}</label>
                 </div>
               </mat-card>
             </div>
@@ -64,10 +63,14 @@
           <mat-expansion-panel class="myPanel" [expanded]="true">
             <mat-expansion-panel-header>
               <mat-panel-title>
-                {{project.projectName}}
+                {{ project.projectName }}
               </mat-panel-title>
-              <mat-panel-description>
-                {{project.defaultAddress.addressLine1}}
+              <mat-panel-description class="main-color">
+                {{ project.defaultAddress.addressLine1 }}
+                {{ project.defaultAddress.addressLine2 }}
+                {{ project.defaultAddress.city }}
+                {{ project.defaultAddress.state }}
+                {{ project.defaultAddress.country }}
               </mat-panel-description>
             </mat-expansion-panel-header>
 
@@ -93,9 +96,11 @@
               <ng-container matColumnDef="Makes">
                 <th mat-header-cell *matHeaderCellDef>Makes</th>
                 <td mat-cell *matCellDef="let element">
-                  <span class="brand-view-style m-r-5" *ngFor="let make of element.makes">
-                    {{make}}
-                  </span>
+                  <ng-container *ngIf="element.makes.length">
+                    <span class="brand-view-style m-r-5" *ngFor="let make of element.makes">
+                      {{ make }}
+                    </span>
+                  </ng-container>
                 </td>
               </ng-container>
 
