--- a/src/app/features/users/update-info/update-info.component.html
+++ b/src/app/features/users/update-info/update-info.component.html
@@ -3,6 +3,23 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <div class="update-info__popup p-4 mt-5">
+
+                    <!-- <form *ngIf="photoForm" [formGroup]="photoForm">
+                    
+                        <div class="phot-title"></div>
+                        <div class="user-photo">
+                            <img [src]="localImg || 'assets/images/default-photo.jpg'"
+                                class="img-fluid user_photo" alt="">
+                        </div>
+                    
+                        <div class="browser-method">
+                            <label class="myLabel">
+                                <input type="file" accept=".jpg,.jpeg,.png,.webp" (change)="onFileSelect($event)" />
+                                <span>+ Add Photo</span>
+                            </label>
+                        </div>
+                    </form> -->
+
                     <form class="update-info__form" *ngIf="userInfoForm" [formGroup]="userInfoForm" (ngSubmit)="submit()">
                         <div class="row">
 
@@ -11,7 +28,20 @@
                             </div>
 
                             <div class="col-md-6">
-                                <app-upload #uploadRef [updateInfo]="'true'"></app-upload>
+                                <!-- <app-upload #uploadRef [updateInfo]="'true'"></app-upload> -->
+
+                                <div class="phot-title"></div>
+                                <div class="user-photo">
+                                    <img [src]="localImg || 'assets/images/default-photo.jpg'"
+                                        class="img-fluid user_photo" alt="">
+                                </div>
+                            
+                                <div class="browser-method">
+                                    <label class="myLabel">
+                                        <input type="file" accept=".jpg,.jpeg,.png,.webp" (change)="onFileSelect($event)" />
+                                        <span>+ Add Photo</span>
+                                    </label>
+                                </div>
                             </div>
                             
 
