--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-12">
         <card-layout *ngIf="product" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)"
-          [projectDetails]="product"></card-layout>
+          [projectDetails]="product" [disableEditDelete]="true"></card-layout>
       </div>
     </div>
     <div class="row p-t-10">
