--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -1,6 +1,6 @@
 <form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()" class="add-project-component-dialog">
   <div class="header-add-edit-dialog">
-    <h1 mat-dialog-title>Add Project</h1>
+    <h1 mat-dialog-title>Project Details</h1>
     <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
       <span aria-hidden="true">×</span>
     </button>
@@ -144,7 +144,7 @@
           <div class="col-sm-3">
             <!-- project unit -->
             <mat-form-field class="border-select">
-              <mat-label>Project Unit</mat-label>
+              <mat-label>Unit</mat-label>
               <mat-select formControlName="unit">
                 <mat-option *ngFor="let unit of units" [value]="unit.value">
                   {{unit.value}}
@@ -160,9 +160,9 @@
           <div class="col-sm-3">
             <!-- construction cost -->
             <mat-form-field class="border-input">
-              <mat-label>Construction Cost</mat-label>
+              <mat-label>Construction Cost &#x20b9;</mat-label>
               <input matInput type="number" formControlName="cost" required />
-              <!-- <mat-error>Construction Cost is Required</mat-error> -->
+              <!-- <mat-error>Construction Cost is Required</mat-error> --> 
             </mat-form-field>
           </div>
 
@@ -181,10 +181,10 @@
           <div class="col-sm-6">
             <!-- project Type -->
             <mat-form-field class="border-input">
-              <mat-label>GST No*</mat-label>
+              <mat-label>GST IN</mat-label>
               <input matInput type="text" formControlName="gstNo" />
-              <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
-                class="form-error-msg"> Gst No is required </small>
+              <!-- <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
+                class="form-error-msg"> Gst No is required </small> -->
               <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
                 class="form-error-msg"> Enter Valid Gst No</small>
               <!-- <mat-error>Address is Required</mat-error> -->
