supplier table scroll done and texts changed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -23,8 +23,8 @@
                 The actual rendered columns are set as a property on the row definition" -->
 
         <!-- Position Column -->
-        <ng-container matColumnDef="Indent Name">
-          <th mat-header-cell *matHeaderCellDef>Indent Name</th>
+        <ng-container matColumnDef="Indent Number">
+          <th mat-header-cell *matHeaderCellDef>Indent Number</th>
           <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
         </ng-container>
 
@@ -92,8 +92,8 @@
                   The actual rendered columns are set as a property on the row definition" -->
 
         <!-- Position Column -->
-        <ng-container matColumnDef="Indent Name">
-          <th mat-header-cell *matHeaderCellDef>Indent Name</th>
+        <ng-container matColumnDef="Indent Number">
+          <th mat-header-cell *matHeaderCellDef>Indent Number</th>
           <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
         </ng-container>
 
