--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -136,7 +136,7 @@
     <mat-expansion-panel-header>
       <div class="row p-t-10 p-b-10">
         <div class="col-sm-12">
-            <span>Deactivate Users</span>
+            <span>Deactivated Users</span>
         </div>
       </div>
     </mat-expansion-panel-header>
