--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -12,8 +12,8 @@
       <div class="col-xs-9">
         <div class="text-right add-user-details-button-right p-t-10 p-r-20">
           <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-            [routerLink]="['../../po/initiate-po']">
-            Inititate P.O.
+            [routerLink]="['../../po/initiate-po']" matTooltip="Issue P.O. to supplier without Request For Quotations">
+            Initiate P.O.
           </button>
         </div>
       </div>
