--- a/src/assets/scss/pages/po-card.component.scss
+++ b/src/assets/scss/pages/po-card.component.scss
@@ -2,4 +2,12 @@
     .mat-grid-tile {
         border: 0.1px solid black
     }
+
+    .border-none{
+        border:none;
+    }
+    .font-weight-500{
+       padding-left: 0px !important;
+       font-weight: 500 !important;
+    }
 }
