--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -131,7 +131,8 @@
 .btn-warning.disabled, .btn-warning:disabled,
 .btn-outline-warning:not(:disabled):not(.disabled).active,
 .btn-outline-warning:not(:disabled):not(.disabled):active,
-.show>.btn-outline-warning.dropdown-toggle {
+.show>.btn-outline-warning.dropdown-toggle,
+.btn-outline-warning:hover {
     background-color: #F47720;
     border-color: #F47720;
     color: #ffffff;
