--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -1,5 +1,5 @@
 
-<form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()">
+<form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()" class="add-edit-user-modal-form">
  <div class="header-add-edit-dialog">
       <h1 mat-dialog-title>Add User</h1>
       <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
