--- a/src/app/shared/dialogs/delete-bom/delete-bom-component.html
+++ b/src/app/shared/dialogs/delete-bom/delete-bom-component.html
@@ -13,7 +13,7 @@
     <div class="col-sm-12 save-btn-add-edit-user-modal">
         <button
         mat-raised-button (click)="cancel()"
-        class="main-background-color main-button color-white pull-left"
+        class="main-color main-button pull-left"
       >
         Cancel
       </button>
