--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -38,14 +38,14 @@
               </div>
             </div>
             <div class="col-xs-2 formGroup">
-              <div class="issue-qty-div">
-                <div>
+              <div class="supplier-qty-div">
+                <div class="p-r-50">
                   {{indent.issuedQty}}
                 </div>
 
-                <div class="show-detail-qty" *ngIf="indent.IssuedQuantityList">
+                <div class="show-detail-supplier" *ngIf="indent.IssuedQuantityList">
                   <img src="../../../../assets/images/i_icon.png" />
-                  <div id="detail-qty">
+                  <div id="detail-supplier">
                     <div class="row">
                       <div class="col-sm-6">
                         <span>Issued Date</span>
