--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -452,3 +452,11 @@ mat-accordion{
       justify-content: center;
     }
   }
+  
+  .mat-dialog-container{
+    padding-top: 5px !important;
+  }
+  
+  // .mat-header-cell{
+  //   background: #1997bbs !important;
+  // }
