--- a/src/assets/scss/pages/card-layout.scss
+++ b/src/assets/scss/pages/card-layout.scss
@@ -16,6 +16,10 @@
             box-shadow: 1px 1px 4px -1px rgba(0,0,0,0.5);
             justify-content: center;
             }
+            .box-custom:hover{
+                background: #f3f3f399;
+                 border: 1px solid #F47720;
+            }
          .purchase-amount{
                 color: #4A4A4A;
                 font-weight: 500;
