--- a/src/app/shared/dialogs/double-confirmation/double-confirmation-component.html
+++ b/src/app/shared/dialogs/double-confirmation/double-confirmation-component.html
@@ -7,19 +7,20 @@
 <div mat-dialog-content class="padding-for-dialog-after-header">
   <p class="text-center">Are you sure you want to delete this project?</p>
 </div>
-<div mat-dialog-actions>
-  <div class="col-sm-6">
-    <button
-      mat-raised-button
-      class="main-color main-button pull-left" (click)="close()">
-      Cancel
-    </button>
-  </div> 
-  <div class="col-sm-6">
-    <button
-      mat-raised-button
-      class="main-background-color main-button color-white pull-right" (click)="delete()">
-      Delete
-    </button>
+     
+  <div mat-dialog-actions>
+    <div class="col-sm-12 save-btn-add-edit-user-modal">
+        <button
+        mat-raised-button (click)="close()"
+        class="main-color main-button pull-left"
+      >
+        Cancel
+      </button>
+      <button
+        mat-raised-button (click)="delete()"
+        class="main-background-color main-button color-white pull-right"
+      >
+        Delete
+      </button>
+    </div>
   </div>
-</div>
