--- a/src/app/shared/dialogs/selectrfq-terms/selectrfq-terms.component.html
+++ b/src/app/shared/dialogs/selectrfq-terms/selectrfq-terms.component.html
@@ -12,19 +12,18 @@
       </button>
     </div>
   </div>
-
   <div class="row">
     <div class="col-xs-6">
       <ng-container *ngFor="let term of rfqTerms">
-        <mat-radio-group name="element" aria-labelledby="example-radio-group-label" class="example-radio-group" formControlName="term">
-          <mat-radio-button class="example-radio-button" [value]="element">
-            {{ element.termsDesc }}
+        <mat-radio-group name="term" aria-labelledby="example-radio-group-label" class="display-block" formControlName="term">
+          <mat-radio-button class="example-radio-button" [value]="term">
+            {{ term.termsDesc }}
           </mat-radio-button>
         </mat-radio-group>
       </ng-container>
     </div>
     <div class="col-xs-6">
-      <span *ngIf="[termsForm][controls][term].value.termsDesc === 'others'">
+      <span *ngIf="[termsForm][controls][term].value.termsDesc === 'Others'">
         <mat-form-field class="example-full-width">
           <mat-label>Term Desc</mat-label>
           <textarea matInput formControlName="customTerm" placeholder="Custom Term Desc"></textarea>
