Issue-to-indent Fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -460,3 +460,7 @@ mat-accordion{
   // .mat-header-cell{
   //   background: #1997bbs !important;
   // }
+  .mat-checkbox-inner-container{
+    width: 19px !important;
+    height: 19px !important;
+  }
