--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -1,5 +1,5 @@
 <div class="page-start-point ">
-  <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+  <div class="p-l-20 p-r-20 p-b-20">
     <card-layout *ngIf="projectData" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)"
       [projectDetails]="projectData" [disableEditDelete]="true"></card-layout>
     <div class="row">
@@ -40,7 +40,7 @@
 
     </div>
 
-    <div class="row">
+    <div class="row bom-details-table-div-part">
       <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="col-sm-12 bom-material-table">
         <ng-container matColumnDef="materialName">
           <th *matHeaderCellDef class="first-column-row-header">
@@ -179,7 +179,7 @@
             </div>
           </td>
         </ng-container>
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay;sticky:true"></tr>
         <tr mat-row *matRowDef="let element; columns: columnsToDisplay" (click)="toggleRow(element)"></tr>
       </table>
     </div>
